--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "prisma:start_db": "npx prisma dev @0.0.0-dev.202509301625"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
