--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "prisma:start_db": "npx prisma dev @0.0.0-dev.202509301625"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
